--- a/chrome.html
+++ b/chrome.html
@@ -46,83 +46,112 @@
     <header>
       <nav class="blue lighten-1 theme">
         <div class="nav-wrapper"><a href="/" class="brand-logo">ON Demand</a><a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-            <li><a href="https://chrome.com/">Google Chrome</a></li>
-            <li><a href="https://firefix.com/">Mozilla Firefox</a></li>
-            <li><a href="https://whale.naver.com">Naver Whale</a></li>
-          </div>
-        </nav>
-      </header>
-      <div class="ad">
-            <!-- On Demand-main -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2810659463174293"
-                data-ad-slot="4386636415"
-                data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          <p>google AD</p>
-          </div>
-          <div id="contents" class="container">
-            <div class="row">
-              <div class="col s12 l1 push-l11">
-
-              </div>
-              <div class="col s12 l11 pull-l1">
-                <div class="card z-depth-2">
-                  <div class="card-content">
-                    <p class="card-title">Internet Explorer 미지원</p>
-                    <p>본 사이트는 Internet Explorer를 지원하지 않습니다.
-                      아래에 지원하는 대표적인 브라우저들의 목록이 있습니다.</p>
-                  </div>
-                </div>
-                <div class="card z-depth-2">
-                  <div class="card-content">
-                    <p class="card-title">Google Chrome</p>
-                    <p>꽤 유명한 브라우저입니다. 사용하기 편리합니다.</p>
-                    <br>
-                    <a class="btn btn-large light-blue darken-2"
-                      href="https://chrome.com/" target="_blank">살펴보기</a>
-                  </div>
-                </div>
-                <div class="card z-depth-2">
-                  <div class="card-content">
-                    <p class="card-title">Mozilla Firefox</p>
-                    <p>개발자에게 최적화되어있는 브라우저입니다.</p>
-                    <br>
-                    <a class="btn btn-large orange darken-1"
-                      href="https://firefox/" target="_blank">살펴보기</a>
-                  </div>
-                </div>
-                <div class="card z-depth-2">
-                  <div class="card-content">
-                    <p class="card-title">Naver Whale</p>
-                    <p>네이버에서 제작한 네이버 맞춤형 브라우저입니다.</p>
-                    <br>
-                    <a class="btn btn-large teal accent-2 black-text"
-                      href="https://whale.naver.com/" target="_blank">살펴보기</a>
-                  </div>
-                  </div>
-              </div>
+          <ul class="right hide-on-med-and-down">
+          <li><a href="https://chrome.com/">Google Chrome</a></li>
+          <li><a href="https://firefix.com/">Mozilla Firefox</a></li>
+          <li><a href="https://whale.naver.com">Naver Whale</a></li>
+        </div>
+      </nav>
+    </header>
+    <div class="ad">
+      <!-- On Demand-main -->
+      <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-2810659463174293"
+        data-ad-slot="4386636415"
+        data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <p>google AD</p>
+    </div>
+    <div id="contents" class="container">
+      <div class="row">
+        <div class="col s12 l1 push-l11">
+        </div>
+        <div class="col s12 l11 pull-l1">
+          <div class="card z-depth-2">
+            <div class="card-content">
+              <p class="card-title">Internet Explorer 미지원</p>
+              <p>본 사이트는 Internet Explorer를 지원하지 않습니다.
+                아래에 지원하는 대표적인 브라우저들의 목록이 있습니다.</p>
             </div>
           </div>
-          <div style="margin-top: -20px" class="ad">
-              <!-- On Demand-footer -->
-              <ins class="adsbygoogle"
-                   style="display:block"
-                   data-ad-client="ca-pub-2810659463174293"
-                   data-ad-slot="9403901631"
-                   data-ad-format="auto"></ins>
-              <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-          <p>google AD</p>
+          <div class="card z-depth-2">
+            <div class="card-content">
+              <p class="card-title">Google Chrome</p>
+              <p>꽤 유명한 브라우저입니다. 사용하기 편리합니다.</p>
+              <br>
+              <a class="btn btn-large light-blue darken-2"
+                href="https://chrome.com/" target="_blank">살펴보기</a>
+            </div>
+          </div>
+          <div class="card z-depth-2">
+            <div class="card-content">
+              <p class="card-title">Mozilla Firefox</p>
+              <p>개발자에게 최적화되어있는 브라우저입니다.</p>
+              <br>
+              <a class="btn btn-large orange darken-1"
+                href="https://firefox/" target="_blank">살펴보기</a>
+            </div>
+          </div>
+          <div class="card z-depth-2">
+            <div class="card-content">
+              <p class="card-title">Naver Whale</p>
+              <p>네이버에서 제작한 네이버 맞춤형 브라우저입니다.</p>
+              <br>
+              <a class="btn btn-large teal accent-2 black-text"
+                href="https://whale.naver.com/" target="_blank">살펴보기</a>
+            </div>
+            </div>
+        </div>
       </div>
-
+    </div>
+    <div style="margin-top: -20px" class="ad">
+      <!-- On Demand-footer -->
+      <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-2810659463174293"
+        data-ad-slot="9403901631"
+        data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <p>google AD</p>
+    </div>
+    <footer class="page-footer blue lighten-1 theme">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">사이트 안내</h5>
+            <p class="grey-text text-lighten-4">본 사이트는 <a href="http://materializecss.com" class="white-text">Materialize</a> 프레임워크를 사용하여 개발되었습니다.</p>
+          </div>
+          <div class="col l6 s12">
+            <h5 class="white-text">개발자 정보</h5>
+            <p class="grey-text text-lighten-4"><a data-email="webmaster##mori.space" class="grey-text text-lighten-4 email"></a></p>
+            <p class="grey-text text-lighten-4">본 사이트는 이메일 무단 수집을 거부합니다.</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          <p>© 2017. 볕뉘(small-sunshine) all rights reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script async src="/static/jquery/jquery.min.js"></script>
     <script async src="/static/materializecss/js/materialize.min.js"></script>
+    <script>
+      $(document).on('ready', () => {
+        $('.email').each((index, data) => {
+          var email = $(data).data('email').replace(/##/g, '@')
+          $(data).text(email)
+          $(data).attr('href', 'mailto:' + email)
+          $(data).removeAttr('data-email')
+        })
+        console.log('email display success')
+      })
+    </script>
   </body>
 </html>
